<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    android:fitsSystemWindows="true"
    tools:context=".FirstFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/WarningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@drawable/brightness_alert_24px"
        app:backgroundTint="@color/navigationbutton_background_color"
        app:tint="@color/floating_button_hint_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/toolbar_background_color"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/toolbar_text"
                app:titleMargin="4dp"
                app:titleTextColor="@color/toolbar_titel_color" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/Button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/navigationbutton_background_color"
                android:fontFamily="sans-serif-light"
                android:hapticFeedbackEnabled="false"
                android:text="@string/button1_text"
                android:textColor="@color/navigationbutton_text_color"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/navigationbutton_background_color"
                android:fontFamily="sans-serif-light"
                android:text="@string/button2_text"
                android:textColor="@color/navigationbutton_text_color"
                android:textColorLink="@color/navigationbutton_text_color"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>