<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    android:backgroundTintMode="screen"
    android:fitsSystemWindows="true"
    android:scrollIndicators="none"
    tools:context=".SecondFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BackFloatingButtonSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@drawable/arrow_back_24px"
        app:tint="@color/floating_button_hint_color"
        app:backgroundTint="@color/navigationbutton_background_color" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ForwardFloatingButtonSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@drawable/arrow_forward_24px"
        app:tint="@color/floating_button_hint_color"
        app:backgroundTint="@color/navigationbutton_background_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/layout_background_color"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbar_background_color"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/toolbar_text_birth_dates"
                app:titleTextColor="@color/toolbar_titel_color" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center|right"
                        android:hapticFeedbackEnabled="false"
                        android:inputType="text"
                        android:scrollIndicators="none"
                        android:singleLine="false"
                        android:text="@string/text_feld_you"
                        android:textColor="@color/white"
                        android:textIsSelectable="false" />


                    <EditText
                        android:id="@+id/EingabeDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_with_shadow_bg"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:hapticFeedbackEnabled="false"
                        android:inputType="date"
                        android:text="@string/date_text_default"
                        android:textColor="@color/navigationbutton_text_color" />
                </LinearLayout>

            </TableRow>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText2"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center|right"
                        android:inputType="text"
                        android:scrollIndicators="none"
                        android:text="@string/text_feld_partner"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/EingabeDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_with_shadow_bg"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:inputType="date"
                        android:text="@string/date_text_default"
                        android:textColor="@color/navigationbutton_text_color" />
                </LinearLayout>
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>